--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -42,7 +42,7 @@
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
                                             <label asp-for="City"></label>
-                                            <input asp-for="City" class="form-control" />
+                                            <input asp-for="City" class="form-control" placeholder="Cidade" />
                                         </div>
                                         <div class="col-lg-3 filter-button">
                                             <button type="submit" class="btn btn-primary">
