--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -41,7 +41,7 @@
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
                                             <label asp-for="Name"></label>
-                                            <input asp-for="Name" class="form-control" />
+                                            <input asp-for="Name" class="form-control" placeholder="Nome" />
                                         </div>
                                         <div class="col-lg-3 filter-button">
                                             <button type="submit" class="btn btn-primary">
