--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -42,11 +42,11 @@
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
                                             <label asp-for="Name"></label>
-                                            <input asp-for="Name" class="form-control" />
+                                            <input asp-for="Name" class="form-control" placeholder="Nome" />
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="CRM"></label>
-                                            <input asp-for="CRM" class="form-control" />
+                                            <input asp-for="CRM" class="form-control" placeholder="CRM" />
                                         </div>
                                         <div class="col-lg-3 filter-button">
                                             <button type="submit" class="btn btn-primary">
