--- a/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
@@ -4,8 +4,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="Error"
-      data-ajax-success="AddSuccess"
+      data-ajax-failure="error"
+      data-ajax-success="addSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
