--- a/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Partials/_EditTreatmentPlace.cshtml
@@ -4,8 +4,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="Error"
-      data-ajax-success="EditSuccess"
+      data-ajax-failure="error"
+      data-ajax-success="editSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
