--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -45,6 +45,9 @@
                                             <input asp-for="Name" class="form-control" placeholder="Nome" />
                                         </div>
                                         <div class="col-lg-3 filter-button">
+                                            <button type="reset" class="btn btn-secondary">
+                                                <i class="fas fa-eraser"></i> Limpar
+                                            </button>
                                             <button type="submit" class="btn btn-primary">
                                                 <i class="fas fa-filter"></i> Filtrar
                                             </button>
