--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -149,7 +149,7 @@
                                         </div>
 
                                         <button type="reset" class="btn btn-secondary">
-                                            <i class="fas fa-filter"></i> Limpar
+                                            <i class="fas fa-eraser"></i> Limpar
                                         </button>
                                         <button type="submit" class="btn btn-primary">
                                             <i class="fas fa-filter"></i> Filtrar
