--- a/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientInformation.cshtml
@@ -4,22 +4,42 @@
     <div class="form-row">
         <div class="form-group col-lg-12">
             <label asp-for="CancerTypes" class="control-label"></label>
-            <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control patientInformationSelect" data-tags="true" data-placeholder="Tipos de Câncer" data-allow-clear="true"></select>
+            <select asp-for="CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control patientInformationSelect" 
+                    data-theme="bootstrap" 
+                    data-language="pt-BR" 
+                    data-placeholder="Tipos de Câncer" 
+                    data-tags="true" 
+                    data-allow-clear="true"></select>
             <span asp-validation-for="CancerTypes" class="text-danger"></span>
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Medicines" class="control-label"></label>
-            <select asp-for="Medicines" asp-items="Model.SelectMedicines" class="form-control patientInformationSelect" data-tags="true" data-placeholder="Remédios" data-allow-clear="true"></select>
+            <select asp-for="Medicines" asp-items="Model.SelectMedicines" class="form-control patientInformationSelect" 
+                    data-theme="bootstrap" 
+                    data-language="pt-BR" 
+                    data-placeholder="Remédios" 
+                    data-tags="true" 
+                    data-allow-clear="true"></select>
             <span asp-validation-for="Medicines" class="text-danger"></span>
         </div>
         <div class="form-group col-md-12">
             <label asp-for="Doctors" class="control-label"></label>
-            <select asp-for="Doctors" asp-items="Model.SelectDoctors" class="form-control patientInformationSelect" data-tags="true" data-placeholder="Médicos" data-allow-clear="true"></select>
+            <select asp-for="Doctors" asp-items="Model.SelectDoctors" class="form-control patientInformationSelect" 
+                    data-theme="bootstrap" 
+                    data-language="pt-BR" 
+                    data-placeholder="Médicos" 
+                    data-tags="true" 
+                    data-allow-clear="true"></select>
             <span asp-validation-for="Doctors" class="text-danger"></span>
         </div>
         <div class="form-group col-lg-12">
             <label asp-for="TreatmentPlaces" class="control-label"></label>
-            <select asp-for="TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control patientInformationSelect" data-tags="true" data-placeholder="Locais de Tratamento" data-allow-clear="true"></select>
+            <select asp-for="TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control patientInformationSelect" 
+                    data-theme="bootstrap" 
+                    data-language="pt-BR" 
+                    data-placeholder="Locais de Tratamento" 
+                    data-tags="true" 
+                    data-allow-clear="true"></select>
             <span asp-validation-for="TreatmentPlaces" class="text-danger"></span>
         </div>
     </div>
