#77 Adjust selects and fields

--- a/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_EditAddress.cshtml
@@ -37,7 +37,13 @@
         </div>
         <div class="form-group">
             <label asp-for="ResidenceType" class="control-label"></label>
-            <select asp-for="ResidenceType" asp-items="@Html.GetEnumSelectList<Globals.ResidenceType>()" class="form-control">
+            <select asp-for="ResidenceType" asp-items="@Html.GetEnumSelectList<Globals.ResidenceType>()" class="form-control addressSelect2"
+                    data-theme="bootstrap"
+                    data-language="pt-BR" 
+                    data-placeholder="Tipo de Residência" 
+                    data-allow-clear="true" 
+                    data-minimum-results-for-search="Infinity" 
+                    data-container-css-class="select2NoSearch">
                 <option value=""></option>
             </select>
             <span asp-validation-for="ResidenceType" class="text-danger"></span>
