--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -35,12 +35,27 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="Sex" class="control-label"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
+            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control patientProfileSelect2"
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Gênero"
+                    data-minimum-results-for-search="Infinity"
+                    data-container-css-class="select2NoSearch">
+                <option value=""></option>
+            </select>
             <span asp-validation-for="Sex" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
             <label asp-for="CivilState" class="control-label"></label>
-            <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control"></select>
+            <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control patientProfileSelect2"
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Estado Civil"
+                    data-allow-clear="true"
+                    data-minimum-results-for-search="Infinity"
+                    data-container-css-class="select2NoSearch">
+                <option value=""></option>
+            </select>
             <span asp-validation-for="CivilState" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
