--- a/_source/LigaCancer/Views/Phone/Partials/_EditPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_EditPhone.cshtml
@@ -17,7 +17,15 @@
         </div>
         <div class="form-group">
             <label asp-for="PhoneType" class="control-label"></label>
-            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control"></select>
+            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control phoneSelect2"
+                    data-theme="bootstrap"
+                    data-language="pt-BR" 
+                    data-placeholder="Tipo do Telefone" 
+                    data-allow-clear="true" 
+                    data-minimum-results-for-search="Infinity" 
+                    data-container-css-class="select2NoSearch">
+                <option value="" selected="selected" ></option>
+            </select>
             <span asp-validation-for="PhoneType" class="text-danger"></span>
         </div>
         <div class="form-group">
