--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="DateOfBirth" class="control-label label-required"></label>
-            <input asp-for="DateOfBirth" type="text" class="form-control" />
+            <input asp-for="DateOfBirth" readonly type="text" class="form-control" />
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 pt-4">
