--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -56,12 +56,12 @@
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateFrom"></label>
-                                            <input asp-for="DateFrom" type="text" class="form-control date" />
+                                            <input asp-for="DateFrom" readonly type="text" class="form-control date" />
                                             <span asp-validation-for="DateFrom" class="text-danger"></span>
                                         </div>
                                         <div class="col-lg-3">
                                             <label asp-for="DateTo"></label>
-                                            <input asp-for="DateTo" type="text" class="form-control date" />
+                                            <input asp-for="DateTo" readonly type="text" class="form-control date" />
                                             <span asp-validation-for="DateTo" class="text-danger"></span>
                                         </div>
                                     </div>
