--- a/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
@@ -22,12 +22,12 @@
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label label-required"></label>
-            <input asp-for="Date" type="text" class="form-control"/>
+            <input asp-for="Date" readonly type="text" class="form-control"/>
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Time" class="control-label label-required"></label>
-            <input asp-for="Time" type="text" class="form-control"/>
+            <input asp-for="Time" readonly type="text" class="form-control"/>
             <span asp-validation-for="Time" class="text-danger"></span>
         </div>
 
