#96 Change validation methods to api controller

--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -2,6 +2,7 @@
 @using LigaCancer.Code
 
 <div class="modal-body">
+    <input asp-for="PatientId" />
     <div class="form-row">
         <div class="form-group col-md-6">
             <label asp-for="FirstName" class="control-label label-required"></label>
