--- a/_source/LigaCancer/Views/Doctor/Partials/_EditDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Partials/_EditDoctor.cshtml
@@ -9,6 +9,7 @@
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
+        <input asp-for="DoctorId" />
         <div class="form-group">
             <label asp-for="Name" class="control-label"></label>
             <input asp-for="Name" class="form-control" />
