--- a/_source/LigaCancer/Views/TreatmentPlace/Partials/_AddTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Partials/_AddTreatmentPlace.cshtml
@@ -9,6 +9,7 @@
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
+        <input asp-for="TreatmentPlaceId" />
         <div class="form-group">
             <label asp-for="City" class="control-label"></label>
             <input asp-for="City" class="form-control" />
