--- a/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
@@ -1,7 +1,6 @@
-﻿@model LigaCancer.Models.UserViewModels.UserFormModel
-@using LigaCancer.Code
+﻿@model LigaCancer.Models.FormModel.UserFormModel
 
-<form asp-action="AddUser"
+<form asp-action="EditUser"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
@@ -9,7 +8,8 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <div class="modal-body form-horizontal" id="">
+    <div class="modal-body form-horizontal">
+        <input asp-for="UserId" />
         <div class="form-group">
             <label asp-for="FirstName" class="control-label"></label>
             <input asp-for="FirstName" class="form-control" />
@@ -20,25 +20,18 @@
             <input asp-for="LastName" class="form-control" />
             <span asp-validation-for="LastName" class="text-danger"></span>
         </div>
-        <div class="form-group">
-            <label asp-for="RoleId" class="control-label"></label>
-            <select asp-for="RoleId" asp-items="@Model.ApplicationRoles" class="form-control"></select>
-            <span asp-validation-for="RoleId" class="text-danger"></span>
-        </div>
+        @if (Model.Email != "felipepergher_10@hotmail.com")
+        {
+            <div class="form-group">
+                <label asp-for="RoleId" class="control-label"></label>
+                <select asp-for="RoleId" asp-items="@Model.ApplicationRoles" class="form-control"></select>
+                <span asp-validation-for="RoleId" class="text-danger"></span>
+            </div>
+        }
         <div class="form-group">
             <label asp-for="Email" class="control-label"></label>
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="control-label"></label>
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ConfirmPassword" class="control-label"></label>
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
 
