--- a/_source/LigaCancer/Views/CancerType/Partials/_EditCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Partials/_EditCancerType.cshtml
@@ -9,12 +9,7 @@
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
-        <input asp-for="CancerTypeId" />
-        <div class="form-group">
-            <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
+        <partial name="Partials/_FormCancerType" />
     </div>
 
     <partial name="_ModalFooter"  />
