--- a/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_AddPresence.cshtml
@@ -11,7 +11,7 @@
     <div class="modal-body form-horizontal">
         <div class="form-group">
             <label asp-for="PatientId" class="control-label label-required"></label>
-            <select asp-for="PatientId" asp-items="@Model.Patients" class="select2 form-control" 
+            <select asp-for="PatientId" asp-items="Model.Patients" class="select2 form-control" 
                     data-theme="bootstrap" 
                     data-language="pt-BR" 
                     data-placeholder="Paciente" 
