--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -7,6 +7,8 @@
 @section styles{
     <environment names="Development">
         <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link href="~/dist/css/datatables.min.css" rel="stylesheet" asp-append-version="true" />
@@ -90,6 +92,7 @@
     <environment names="Development">
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/select2/js/select2.full.min.js"></script>
         <script src="~/js/user.js"></script>
     </environment>
     <environment exclude="Development">
