--- a/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_EditUser.cshtml
@@ -1,37 +1,32 @@
-﻿@model LigaCancer.Models.FormModel.UserFormModel
+﻿@model LigaCancer.Models.FormModel.EditUserFormModel
 
-<form asp-action="EditUser"
+<form id="editUserForm" asp-action="EditUser"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-failure="error"
+      data-ajax-success="editSuccess"
       data-ajax-loading="#submitSpinner">
 
     <div class="modal-body form-horizontal">
         <input asp-for="UserId" />
         <div class="form-group">
-            <label asp-for="FirstName" class="control-label"></label>
-            <input asp-for="FirstName" class="form-control" />
-            <span asp-validation-for="FirstName" class="text-danger"></span>
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="LastName" class="control-label"></label>
-            <input asp-for="LastName" class="form-control" />
-            <span asp-validation-for="LastName" class="text-danger"></span>
-        </div>
-        @if (Model.Email != "felipepergher_10@hotmail.com")
-        {
-            <div class="form-group">
-                <label asp-for="RoleId" class="control-label"></label>
-                <select asp-for="RoleId" asp-items="@Model.ApplicationRoles" class="form-control"></select>
-                <span asp-validation-for="RoleId" class="text-danger"></span>
-            </div>
-        }
-        <div class="form-group">
-            <label asp-for="Email" class="control-label"></label>
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+            <label asp-for="Role" class="control-label"></label>
+            <select asp-for="Role" asp-items="Model.ApplicationRoles" class="form-control userSelect2" style="width: 100%" 
+                data-theme="bootstrap"
+                data-language="pt-BR"
+                data-placeholder="Regra"
+                data-width="resolve"
+                data-minimum-results-for-search="Infinity"
+                data-container-css-class="select2NoSearch">
+                <option value=""></option>
+            </select>
+            <span asp-validation-for="Role" class="text-danger"></span>
         </div>
     </div>
 
