--- a/_source/LigaCancer/Views/Presence/Partials/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_EditPresence.cshtml
@@ -10,12 +10,8 @@
 
     <div class="modal-body form-horizontal">
         <div class="form-group">
-            <label asp-for="PatientId" class="control-label label-required"></label>
-            <select asp-for="PatientId" asp-items="Model.Patients" class="select2 form-control" 
-                    data-theme="bootstrap" 
-                    data-language="pt-BR" 
-                    data-placeholder="Paciente" 
-                    data-allow-clear="true"></select>
+            <label asp-for="PatientId" class="control-label"></label>
+            <input asp-for="PatientId" class="form-control" readonly />
             <span asp-validation-for="PatientId" class="text-danger"></span>
         </div>
         <div class="form-group">
