--- a/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_EditFamilyMember.cshtml
@@ -27,10 +27,11 @@
         </div>
         <div class="form-group">
             <label asp-for="Sex" class="control-label"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control familyMemberSelect2"
+            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control familyMemberSelect2" style="width: 100%"
                     data-theme="bootstrap"
                     data-language="pt-BR" 
                     data-placeholder="Gênero" 
+                    data-width="resolve"
                     data-minimum-results-for-search="Infinity" 
                     data-container-css-class="select2NoSearch"></select>
             <span asp-validation-for="Sex" class="text-danger"></span>
