--- a/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
@@ -12,9 +12,11 @@
     <div class="modal-body form-horizontal">
         <div class="form-group">
             <label asp-for="ArchivePatientType" class="control-label"></label>
-            <select asp-for="ArchivePatientType" asp-items="Html.GetEnumSelectList<Globals.ArchivePatientType>()" class="form-control archiveSelect2"
+            <select asp-for="ArchivePatientType" asp-items="Html.GetEnumSelectList<Globals.ArchivePatientType>()" class="form-control archiveSelect2" style="width: 100%"
                     data-theme="bootstrap"
                     data-language="pt-BR" 
+                    data-placeholder="Motivo"
+                    data-width="resolve"
                     data-minimum-results-for-search="Infinity" 
                     data-container-css-class="select2NoSearch"></select>
             <span asp-validation-for="ArchivePatientType"></span>
