--- a/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_AddPhone.cshtml
@@ -17,10 +17,11 @@
         </div>
         <div class="form-group">
             <label asp-for="PhoneType" class="control-label"></label>
-            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control phoneSelect2"
+            <select asp-for="PhoneType" asp-items="Html.GetEnumSelectList<Globals.PhoneType>()" class="form-control phoneSelect2" style="width: 100%"
                     data-theme="bootstrap"
                     data-language="pt-BR" 
                     data-placeholder="Tipo do Telefone" 
+                    data-width="resolve"
                     data-allow-clear="true" 
                     data-minimum-results-for-search="Infinity" 
                     data-container-css-class="select2NoSearch">
