--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -205,10 +205,10 @@
         <script src="~/lib/select2/js/select2.full.min.js"></script>
         <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+        <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.js"></script>
         <script src="~/lib/dropzone/min/dropzone.min.js"></script>
         <script src="~/lib/jeditable/jquery.jeditable.min.js"></script>
         <script src="~/js/patient.js"></script>
-        <script src="https://unpkg.com/gijgo@1.9.13/js/messages/messages.pt-br.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
