--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -111,6 +111,7 @@
         <script src="~/lib/select2/js/select2.full.min.js"></script>
         <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+        <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.js"></script>
         <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
         <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
         <script src="~/lib/jszip/jszip.min.js"></script>
@@ -118,7 +119,6 @@
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
         <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="~/js/presence.js"></script>
-        <script src="https://unpkg.com/gijgo@1.9.13/js/messages/messages.pt-br.js"></script>
 
     </environment>
     <environment exclude="Development">
