#20 Change includes to use string[]

--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -111,7 +111,7 @@
         <script src="~/lib/select2/js/select2.full.min.js"></script>
         <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
-        <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.js"></script>
+        <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.min.js"></script>
         <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
         <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
         <script src="~/lib/jszip/jszip.min.js"></script>
