--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -11,8 +11,7 @@
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
     <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
-    <link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />
-
+    @*<link href="~/lib/datatables-buttons-bs4/css/buttons.bootstrap4.min.css" rel="stylesheet" />*@
 </environment>
     <environment exclude="Development">
         <link href="~/dist/css/presence.min.css" rel="stylesheet" asp-append-version="true" />
@@ -112,14 +111,13 @@
         <script src="~/lib/select2/js/i18n/pt-BR.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
         <script src="~/lib/gijgo/combined/js/messages/messages.pt-br.min.js"></script>
-        <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        @*<script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
         <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
         <script src="~/lib/jszip/jszip.min.js"></script>
         <script src="~/lib/pdfmake/pdfmake.min.js"></script>
         <script src="~/lib/pdfmake/vfs_fonts.js"></script>
-        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>
+        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>*@
         <script src="~/js/presence.js"></script>
-
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/presence.min.js" asp-append-version="true"></script>
