--- a/_source/LigaCancer/Views/FamilyMember/Partials/_AddFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_AddFamilyMember.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label asp-for="DateOfBirth" class="control-label"></label>
-            <input asp-for="DateOfBirth" readonly type="text" class="form-control field-readonly" id="dateOfBirth" />
+            <input asp-for="DateOfBirth" readonly type="text" class="form-control dateField" id="dateOfBirth" />
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group">
