--- a/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_ArchivePatient.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <label asp-for="DateTime" class="control-label"></label>
-            <input asp-for="DateTime" readonly type="text" asp-format="" class="form-control field-readonly" />
+            <input asp-for="DateTime" readonly type="text" asp-format="" class="form-control dateField" />
             <span asp-validation-for="DateTime"></span>
         </div>
     </div>
