#53 fix effect of validator

--- a/_source/LigaCancer/Views/Shared/_LayoutBase.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LayoutBase.cshtml
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewData["Title"] | Rede Videirense do Câncer</title>
+
     <environment names="Development">
-        <link href="~/css/fontawesome.min.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/fontawesome.min.css" rel="stylesheet" />
+        <link href="~/css/style.css" rel="stylesheet" />
+        <link href="~/css/custom.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
