#77 adjusted patient add

--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientInformation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientInformation.cshtml
@@ -8,6 +8,10 @@
       data-ajax-success="addPatientInformationSuccess"
       data-ajax-loading="#submitSpinner">
 
-    <partial name="Partials/_PatientInformation"  />
+    <div class="progress m-3 progressAddPatient">
+        <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+    </div>
+
+    <partial name="Partials/_PatientInformation" />
 
 </form>
