--- a/_source/LigaCancer/wwwroot/css/custom.css
+++ b/_source/LigaCancer/wwwroot/css/custom.css
@@ -58,3 +58,7 @@
     background-color: transparent !important;
     border-color: #e4e7ea;
 }
+
+.progressAddPatient {
+    background-color: #20a8d8 !important;
+}
