--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientNaturality.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientNaturality.cshtml
@@ -8,6 +8,10 @@
       data-ajax-success="addNaturalitySuccess"
       data-ajax-loading="#submitSpinner">
 
+    <div class="progress m-3 progressAddPatient">
+        <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+    </div>
+
     <partial name="Partials/_PatientNaturality" />
 
 </form>
