--- a/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddPatientProfile.cshtml
@@ -8,6 +8,10 @@
         data-ajax-success="addProfileSuccess"
         data-ajax-loading="#submitSpinner">
 
+    <div class="progress m-3 progressAddPatient">
+        <div class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+    </div>
+
     <partial name="Partials/_PatientProfile" />
 
 </form>
