#109-Password field settings

--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -34,11 +34,7 @@
                                 </span>
                             </div>
                             <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha" id="passwordConfirm">
-                            <div class="input-group-append ">
-                                <span class="input-group-text">
-                                    <i class="fas fa-eye-slash" id="eyePasswordConfirm"></i>
-                                </span>
-                            </div>
+                                <i class="eye-password fas fa-eye-slash" id="eyePasswordConfirm"></i>
                         </div>
                         <span asp-validation-for="ResetPassword.Password" class="text-danger ml-5"></span>
                     </div>
@@ -51,11 +47,7 @@
                                 </span>
                             </div>
                             <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha" id="password">
-                            <div class="input-group-append ">
-                                <span class="input-group-text">
-                                    <i class="fas fa-eye-slash" id="eyePassword"></i>
-                                </span>
-                            </div>
+                                <i class="eye-password fas fa-eye-slash" id="eyePassword"></i>
                         </div>
                         <span asp-validation-for="ResetPassword.ConfirmPassword" class="text-danger ml-5"></span>
                     </div>
